Fix: Tabbar - Cut off at windows #368 #370

--- a/css/leptonChrome.css
+++ b/css/leptonChrome.css
@@ -3661,6 +3661,17 @@
   #titlebar {
     -moz-appearance: none !important;
   }
+
+  @media (-moz-os-version: windows-win7),
+    (-moz-platform: windows-win7),
+    (-moz-os-version: windows-win8),
+    (-moz-platform: windows-win8),
+    (-moz-os-version: windows-win10),
+    (-moz-platform: windows-win10) {
+    :root[tabsintitlebar="true"][sizemode="maximized"] #navigator-toolbox {
+      padding-top: 8px;
+    }
+  }
 }
 @supports -moz-bool-pref("userChrome.tab.on_bottom") {
   /* Source file https://github.com/MrOtherGuy/firefox-csshacks/tree/master/chrome/tabs_on_bottom.css made available under Mozilla Public License v. 2.0
